<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FamilyEdu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
       <string name="pull_to_refresh_pull_label">下拉刷新…</string>
  <string name="pull_to_refresh_release_label">放开以刷新…</string>
  <string name="pull_to_refresh_refreshing_label">正在载入…</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label" translatable="false">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label" translatable="false">@string/pull_to_refresh_release_label</string>
    
    
    
    
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="exp">立刻体验</string>
    <string name="homepage">家长</string>
    <string name="forum">家教</string>
    <string name="myhome">我家</string>
    <string name="more">设置</string>
    <string name="more_user">更多</string>
    <string name="my_attention">我关注的版块</string>
    <string name="slogan">爱 生 活    爱 常 州    爱 上 化 龙 巷</string>
    <string name="select_forum">选择版块</string>
    <string name="new_reply">最新回复</string>
    <string name="new_post">最新发帖</string>
    <string name="search_all">全部</string>
    <string name="search_user">相关用户</string>
    <string name="search_note">相关帖子</string>
    <string name="search_key">请输入搜索词</string>
    <string name="search_forum_key">请输入版块名称</string>
    <string name="search_clear">清除历史记录</string>
    <string name="detail_reply">我来说两句</string>
    <string name="reply">回复</string>
    <string name="report">举报</string>
    <string name="report_finish">感谢您的举报，我们会在24小时内对您反映的问题进行处理</string>
    <string name="watch_author">只看该作者</string>
    <string name="author_only">只看楼主</string>
    <string name="watch_all">查看全部</string>
    <string name="author_floor">楼主</string>
    <string name="first_floor">沙发</string>
    <string name="second_floor">板凳</string>
    <string name="third_floor">地板</string>
    <string name="fail_load">数据加载失败，点击屏幕重试</string>
    <string name="upload_fail">"上传失败
点击重传"</string>
    <string name="post">发布</string>
    <string name="save_edit">保存</string>
    <string name="post_title">标题</string>
    <string name="post_address">地址</string>
    <string name="post_content">内容</string>
    <string name="chose_forum">我关注的</string>
    <string name="photo_alum">相册</string>
    <string name="forum_search">版块搜索中，请稍候....</string>
    <string name="ensure">确定</string>
    <string name="check_more">关注更多版块</string>
    <string name="quote">引用</string>
    <string name="mail_title">邮件主题</string>
    <string name="mail_content">邮件内容</string>
    <string name="mail_receiver">收件人邮箱（必填）</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="weixin_friend">微信好友</string>
    <string name="qq_friend">朋友圈</string>
    <string name="qq_space">QQ空间</string>
    <string name="telnet_qq">腾讯QQ</string>
    <string name="send_email">发送邮件</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register_new">注册新账号</string>
    <string name="login_other">使用第三方账号登录</string>
    <string name="unlogin">您尚未登录，点击屏幕登录</string>
    <string name="input_password">输入密码(至少6位，含字母和数字)</string>
    <string name="ensure_password">确认密码</string>
    <string name="register">注册</string>
    <string name="register_content">首次使用手机注册成功后，同一手机设备重复注册无效</string>
    <string name="edit_person">编辑资料</string>
    <string name="send_message">发私信</string>
    <string name="gold">金币</string>
    <string name="prestige">威望</string>
    <string name="punch_card">打卡领工资</string>
    <string name="has_punch">今日已打卡</string>
    <string name="my_message">我的私信</string>
    <string name="my_note">我的帖子</string>
    <string name="my_reply">我的回复</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_streetmate">我的巷友圈</string>
    <string name="my_subscribe">我的订阅</string>
    <string name="my_reader">我的读者</string>
    <string name="his_note">他的帖子</string>
    <string name="his_reply">他的回复</string>
    <string name="his_collect">他的收藏</string>
    <string name="keep_secript">此用户设置隐私保护，禁止访问！</string>
    <string name="hit_watch">点击查看我的回复</string>
    <string name="msg_refuse_reply">当前信息不能回复</string>
    <string name="config">设置</string>
    <string name="streetmate">圈子</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检查更新</string>
    <string name="push_message">消息推送</string>
    <string name="image_mode">无图模式</string>
    <string name="font_size">字体大小</string>
    <string name="clear_cache">清除缓存</string>
    <string name="submit_sugest">意见反馈</string>
    <string name="submit">提交</string>
    <string name="exit_login">退出当前帐号</string>
    <string name="sex">性别</string>
    <string name="sign">个性签名</string>
    <string name="level">等级</string>
    <string name="birthday">生日</string>
    <string name="age">年龄</string>
    <string name="photo">拍照</string>
    <string name="select_alum">从相册选择</string>
    <string name="follow_us">关注我们</string>
    <string name="copyright">copyright ©? hualongxiang.com</string>
    <string name="download_hlx_start">下载开始化龙巷客户端</string>
    <string name="download_complete">下载完成，点击安装</string>
    <string name="download_fail">下载失败</string>
    <string name="download_image">保存图片到相册</string>
    <string name="share_from_app">（分享自@化龙巷）</string>
    <string name="share_from">来自Android客户端</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中…</string>
    <string name="streetmate_all">全部</string>
    <string name="streetmate_new">最新</string>
    <string name="streetmate_hot">热门</string>
    <string name="streetmate_follow">订阅</string>
    <string name="streetmate_post_hint">这一刻的想法</string>
    <string name="streetmate_note">巷友圈</string>
    <string name="streetmate_reply">回复</string>
    <string name="streetmate_alumn">相册</string>
    <string name="streetmate_photo">拍照</string>
    <string name="streetmate_cancel">取消</string>
    <string name="streetmate_hint">我来说两句</string>
    <string name="streetmate_subscribe">订阅楼主</string>
    <string name="streetmate_unsubscribe">取消订阅</string>
    <string name="streetmate_radio">按住 说话</string>
    <string name="streetmate_send">发送</string>
    <string name="streetmate_today">今天</string>
    <string name="subscribe_cancel">取消订阅</string>
    <string name="subscribe_ta">订阅TA</string>
    <string name="user_note_post">发帖</string>
    <string name="user_note_reply">回帖</string>
    <string name="agreement_agree">我已阅读并同意</string>
    <string name="load_last_page">当前已是最后一页</string>
    <string name="favorite_photo">照片</string>
    <string name="favorite_sdcard">SD卡</string>
    <string name="favorite_screen_cap">MIUI截屏</string>
    <string name="favorite_ringtone">铃声</string>
    <string name="ptr_pull_to_refresh">下拉刷新</string>
    <string name="ptr_release_to_refresh">释放后刷新</string>
    <string name="ptr_loading">加载中...</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    
    <string name="loading">加载中...</string>
     <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    
    <string name="pull_to_refresh_top_pull">下拉刷新</string>
    <string name="pull_to_refresh_top_release">释放刷新</string>
    <string name="pull_to_refresh_top_refreshing">加载中...</string>
    <string name="pull_to_refresh_bottom_pull">继续拖动</string>
    <string name="pull_to_refresh_bottom_release">放开装载更多</string>
    <string name="pull_to_refresh_bottom_refreshing">正在装载数据..</string>
    
    <string name="teacher">家教</string>
    <string name="parent">家长</string>

    
      <string name="receive_the_passthrough">收到透传：action：</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
      <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="recoding_fail">录音失败，请重试！</string><string name="Delete_the_contact">删除联系人</string>
    <string name="Move_into_the_blacklist_new">移入到黑名单</string>
    <string name="Change_the_group_name">改变群名称</string>
    <string name="The_dissolution_of_chatting_new">解散群聊</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="you_are_group">你被群创建者从此群中移除</string>
    <string name="the_current_group">当前群聊已被群创建者解散</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="gorup_not_found">找不到这个群组</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="Send_the_following_pictures">发送以下图片？</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="not_download">未下载:</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="resend">重发</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="Have_downloaded">已下载    </string>
    <string name="Did_not_download">未下载</string>
</resources>
