<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp12" >

        <EditText
            android:id="@+id/edtLoginUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_login_item_bg"
            android:drawableLeft="@drawable/login_name_normal"
            android:drawablePadding="@dimen/padding"
            android:hint="@string/user"
            android:paddingBottom="@dimen/dp15"
            android:paddingLeft="@dimen/padding"
            android:paddingTop="@dimen/dp15"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />

        <EditText
            android:id="@+id/edtLoginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/shape_login_item_bg"
            android:drawableLeft="@drawable/login_password_normal"
            android:drawablePadding="@dimen/padding"
            android:hint="@string/password"
            android:paddingBottom="@dimen/dp15"
            android:paddingLeft="@dimen/padding"
            android:paddingTop="@dimen/dp15"
            android:password="true"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/login"
            style="@style/button_normal"/>

        <TextView
            android:id="@+id/tvLoginRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/register_new"
            android:textColor="@color/login_register_txt"
            android:textSize="@dimen/sp16"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25.0dip"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_other"
                android:textColor="@color/login_login_other_txt"
                android:textSize="@dimen/sp16" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25.0dip"
            android:orientation="horizontal"
            android:visibility="gone" >

            <Button
                android:id="@+id/btnLoginWeibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="Sina"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="或"
                android:textColor="@color/login_login_other_txt"
                android:textSize="@dimen/sp16" />

            <Button
                android:id="@+id/btnLoginQQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="qq"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>