<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lyPostLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/line"
            android:background="@color/black"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/edtPostTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp3"
            android:layout_marginTop="@dimen/dp3"
            android:background="@null"
            android:hint="@string/post_title"
            android:padding="@dimen/padding"
            android:textColor="@color/black"
            android:textSize="@dimen/sp18" />

        <ImageView
            android:id="@+id/ivline1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/line"
            android:background="@color/black"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:padding="@dimen/padding"
            android:text="类型"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp18" />

        <ImageView
            android:id="@+id/ivline2"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/line"
            android:background="@color/black"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/edtPostContent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/post_content"
            android:padding="@dimen/padding"
            android:textColor="@color/black"
            android:textSize="@dimen/sp18" />
    </LinearLayout>

</ScrollView>